SERVER-7958 - when an old operation has a writeback,               make sure not to use that info in the user writeback               just block