src/mongo/s/client_info.h
@@ -116,14 +116,16 @@ namespace mongo {
     private:
         AuthenticationInfo _ai;
         struct WBInfo {
-            WBInfo( const WriteBackListener::ConnectionIdent& c , OID o ) : ident( c ) , id( o ) {}
+            WBInfo( const WriteBackListener::ConnectionIdent& c, OID o, bool fromLastOperation )
+                : ident( c ), id( o ), fromLastOperation( fromLastOperation ) {}
             WriteBackListener::ConnectionIdent ident;
             OID id;
+            bool fromLastOperation;
         };
 
         // for getLastError
-        void _addWriteBack( vector<WBInfo>& all , const BSONObj& o );
-        vector<BSONObj> _handleWriteBacks( vector<WBInfo>& all , bool fromWriteBackListener );
+        void _addWriteBack( vector<WBInfo>& all , const BSONObj& o, bool fromLastOperation );
+        vector<BSONObj> _handleWriteBacks( const vector<WBInfo>& all , bool fromWriteBackListener );
 
 
         int _id; // unique client id
